--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,79 @@
 * {
-    margin: 0 auto;
-    border: 2px solid #000;
+  margin: 0 auto;
+  border: 2px solid #000;
 }
 
 /* Header */
 
 header {
-    background-image: url("../images/pic-hero.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #fff;
-    padding: 9rem;
-    margin: 5px;
+  background-image: url("../images/pic-hero.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  padding: 9rem;
+  margin: 5px;
 }
 
 header h1 {
-    text-align: center;
-    font-size: 68px;
+  text-align: center;
+  font-size: 68px;
 }
 
 header img {
-    position: relative;
-    bottom: 7rem;
-    right: 4rem;
+  position: relative;
+  bottom: 7rem;
+  right: 4rem;
 }
 
-/* First Section - Business Info */
+/* Section - Business Info */
 
 .info {
-    display: table;
-    width: 90%;
-    table-layout: fixed;
-    border-spacing: 10px;
-    margin-top: 2rem;
+  display: inline-block;
 }
 
 .info-col {
-    display: table-cell;
+  float: left;
+  width: 29%;
+  padding: 1%;
+  margin: 1%;
 }
 
 .info-col img {
-    float: left;
+  float: left;
 }
 
-.info-col h3{
-    margin: 0 1rem 1rem 3rem;
+.info-col h3 {
+  margin: 0 1rem 1rem 3rem;
 }
+
 .info-col p {
-    width: 60%;
-    padding-right: 3rem;
-    font-size: 1rem;
+  margin-left: 3rem;
+  width: 60%;
 }
 
-/* For Testing */
+/* Section - Clients */
+
+.client-blurb {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.699);
+  width: 40%;
+  float: left;
+  margin: 2% 1% 1% 5%;
+}
+
+.logo {
+  width: 20%;
+  display: inline-block;
+  height: 125px;
+  line-height: 125px;
+  margin: 2% 0 1% 1%;
+  text-align: center;
+}
+
+.logo:nth-child(3) {
+  margin-left: 5%;
+}
+
+.logo img {
+  vertical-align: middle;
+}
